<resources>
    <string name="app_name">DashBoard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dash">Dashboard</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_pay">Pay</string>
    <string name="title_investment">Investments</string>
    <string name="title_settings">Settings</string>
    <string name="title_bank_account">Linked Bank Account</string>
    <string name="title_bank_account_no">HDFCXXXXXXXXX7623</string>
    <string name="title_expenditure">2000</string>

</resources>
